Support primary display swapping for >2 displays

Primary display swapping using Alt + F4 only recognized two displays.
Fixed by returning secondary display that is next to the primary display
in active_display_list_.

Bug: 867966
Change-Id: Icd395582bf48123c0a463e663b0db62c51e352d6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2019474
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Bailey Berro <baileyberro@chromium.org>
Commit-Queue: Su Hong Koo <sukoo@google.com>
Cr-Commit-Position: refs/heads/master@{#738290}